# ComfyUI-NanoBanana-FaceSwap

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  requirements.txt
faceswap/: aspect.py  backend.py  composite.py  crop.py  detect.py  helpers.py  integrate.py  mask.py  node_utils.py  prompts.py  ref_obfuscate.py  sheet.py  soft_fail.py  tensor_utils.py
nodes/: crop_composite_swap.py  identity_sheet.py  inpaint_swap.py  load_image_paint.py  painted_edit.py  prompt_builder.py  ref_obfuscate.py  unbiased_swap.py  whole_image_swap.py
tests/: conftest.py  test_backend_swap_crop.py  test_backend_swap_whole.py  test_composite.py  test_crop.py  test_crop_composite_node.py  test_detect.py  test_identity_sheet_node.py  test_integrate.py  test_painted_edit.py  test_prompt_builder_node.py  test_prompts.py  test_ref_obfuscate.py  test_security_and_new_features.py  test_sheet.py  test_soft_fail.py  test_tensor_utils.py  test_whole_image_swap_node.py
web/: load_image_paint.js
workflows/: 01_face_swap_whole_image.json  02_face_swap_crop_composite.json  03_face_swap_mask_inpaint.json  04_face_swap_unbiased_celeb.json  05_celeb_with_obfuscation.json  06_tattoo_additive_edit.json  07_painted_edit_safety_obscure.json  08_identity_sheet_multi_angle.json  09_batch_swap.json  10_all_pathways_comparison.json  11_painted_object_swap.json  README.md  faceswap_reference.json
